# flower-classification

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: flower_names.py  main.py
notebooks/: 01_data_exploration.ipynb  02_data_preprocessing.ipynb  03_model_building.ipynb
